--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bulma": "^1.0.2",
     "materialize-css": "^1.0.0-rc.2",
     "pinia": "^2.2.2",
     "vue": "^3.4.29",
