--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.7.7",
     "bulma": "^1.0.2",
     "materialize-css": "^1.0.0-rc.2",
     "pinia": "^2.2.2",
+    "pinia-plugin-persistedstate": "^4.0.1",
     "vue": "^3.4.29",
     "vue-router": "^4.3.3"
   },
