--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "pinia": "^2.2.2",
     "pinia-plugin-persistedstate": "^4.0.1",
     "vue": "^3.4.29",
-    "vue-router": "^4.3.3"
+    "vue-router": "^4.3.3",
+    "vue-toastification": "^2.0.0-rc.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.5",
